--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -18,7 +18,7 @@
 
     <%= yield %>
 
-    <%= render "shared/nav", location: 'bottom' %>
+    <%= render "shared/nav", location: 'top' %>
 
     <%= source_helper("blog") %>
   </body>
