Investigated new blog error and cleaned up code

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,4 @@
-<hl>Portfolio Items</hl>
+<br /><hl>Portfolio Items</hl>
 
 <%= link_to "Create New Item", new_portfolio_url if logged_in?(:site_admin) %>
 
