--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -11,15 +11,15 @@
   </head>
 
   <body>
+    <%= render "shared/nav", location: 'top' %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
-    <%= render "shared/nav", location: 'top' %>
 
     <%= login_helper %>
 
     <%= yield %>
 
-    <%= source_helper("portfolio") %>
+    <%= source_helper("application") %>
   </body>
 </html>
