--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title><%= @page_title %></title>
-    <%= csrf_meta_tags %>
+  <title><%= @page_title %></title>
+  <%= csrf_meta_tags %>
 
-    <meta name="keywords" content="<%= @seo_keywords %>" />
+  <meta name="keywords" content="<%= @seo_keywords %>" />
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <%= render "shared/nav", location: 'top' %>
-    
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+<body>
+  <div class="site-wrapper">
 
-    <%= login_helper %>
+    <div class="site-wrapper-inner">
 
-    <%= yield %>
+      <div class="cover-container">
+        
+        <%= render "shared/application_nav" %>
 
-    <%= copyright_generator %>
+        <%= login_helper %>
 
-    <%= source_helper("application") %>
-  </body>
+        <%= yield %>
+
+        <%= copyright_generator %>
+
+        <%= source_helper("application") %>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
