Updated styles and added map for contact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,7 @@
-<h1>Pages#about</h1>
+<h1>About Me</h1>
+
+<hr>
+
+<p>Born and raised in beautiful southern California. Met a girl named Jamie from Misery (I mean Missouri). Currently living in South Carolina with my girl and a cute little beagle named Wednesday. Life is good.</p>
+
+<p>Coded my first video game at 15 years old. In the nineteen nineties that was considered to be very cool. In college I helped tutor people in logicistical studies. And like most computerly proficient people of that time I was also the in-house IT guy for any home that I walked into. True story (Real World).</p>
