--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,9 +1,23 @@
-<h1>Pages#contact</h1>
+<h1>Let's connect!</h1>
 
-<p><%= number_to_phone "5555555555" %></p>
+<hr>
 
-<p><%= number_to_currency "15099" %></p>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Homee Address</h3>
 
-<p><%= number_to_percentage "80.4" %></p>
+    <p>1904 W Lakeshore Drive, Landrum, SC 29356</p>
 
-<p><%= number_with_delimiter "1826518250172" %></p>
+    <h3>Phone</h3>
+
+    <p><%= number_to_phone "5555555555" %></p>
+
+    <h3>Email</h3>
+
+    <p><a href="mailto:clintlwilliams@rocketmail.com?subject=PortfolioContact" "email me">Email me</a> </p>
+  </div>
+
+  <div class="col-md-6">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d3260.598233233733!2d-82.2492566844751!3d35.191564980311405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x8859d8f75369c0a7%3A0x7706a696a0e6622f!2s1904%20W%20Lakeshore%20Dr%2C%20Landrum%2C%20SC%2029356!3m2!1d35.191565!2d-82.247068!4m5!1s0x8859d8f75369c0a7%3A0x7706a696a0e6622f!2s1904%20W%20Lakeshore%20Dr%2C%20Landrum%2C%20SC%2029356!3m2!1d35.191565!2d-82.247068!5e0!3m2!1sen!2sus!4v1587479225392!5m2!1sen!2sus" width="450" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  </div>
+</div>
