--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,17 +128,8 @@ body {
 
 
 /*
- * Custom Styles
+ * Affix and center
  */
-
-.card-block {
-  color:black;
-  text-align: left
-}
-
-.auth-links a {
-  color: black;
-}
 
 @media (min-width: 40em) {
   /* Pull out the header and footer */
@@ -168,4 +159,21 @@ body {
   .cover-container {
     width: 55rem;
   }
+}
+
+/*
+ * Custom Styles
+ */
+
+.card-block {
+  color: black;
+  text-align: left;
+}
+
+.auth-links a {
+  color: black;
+}
+
+.register-text {
+  text-align: right;
 }
