Integrated styles for blog pages

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,27 +1,38 @@
 <%= form_for(blog) do |f| %>
   <% if blog.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
-
-      <ul>
-      <% blog.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+    <% blog.errors.full_messages.each do |error| %>
+      <%= alert_generator error %>
+    <% end %>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+  <div class="form-group">
+    <%= f.text_field :title, class: 'form-control', placeholder: "Title" %>
   </div>
 
-  <div class="field">
-    <%= f.label :body %>
-    <%= f.text_area :body %>
+  <div class="form-group">
+    <%= f.label :topic_id %>
+    <%= f.collection_select(:topic_id, Topic.all, :id, :title,
+                              {
+                                include_blank: true
+                              },
+                              class: 'form-control'
+                            )
+    %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.radio_button :status, 'draft' %>
+    <%= f.label :status, 'Draft' %>
+
+    <%= f.radio_button :status, 'published' %>
+    <%= f.label :status, 'Published' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.text_area :body, class: 'form-control', rows: 15, placeholder: "Content" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit "Submit", class: 'btn btn-primary' %>
   </div>
 <% end %>
