--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,26 +1,31 @@
-<div class="col-sm-3 offset-sm-1 blog-sidebar">
+  <div class="col-sm-3 offset-sm-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
-    <h4>About Me</h4>
-    <p>
-      Teaching is both my passion and my best ally for mastery.
-    </p>
+    <h4>About</h4>
+    <p>Rando texto etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
   </div>
-
-  <%= source_helper("alert alert-info blog-sidebar-source") %>
-
   <div class="sidebar-module">
-    <h4>Topics</h4>
-    <% @side_bar_topics.each do |topic| %>
-      <p><%= link_to topic.title, topic_path(topic) %></p>
-    <% end %>
+    <h4>Archives</h4>
+    <ol class="list-unstyled">
+      <li><a href="#">March 2020</a></li>
+      <li><a href="#">February 2020</a></li>
+      <li><a href="#">January 2020</a></li>
+      <li><a href="#">December 2019</a></li>
+      <li><a href="#">November 2019</a></li>
+      <li><a href="#">October 2019</a></li>
+      <li><a href="#">September 2019</a></li>
+      <li><a href="#">August 2019</a></li>
+      <li><a href="#">July 2019</a></li>
+      <li><a href="#">June 2019</a></li>
+      <li><a href="#">May 2019</a></li>
+      <li><a href="#">April 2019</a></li>
+    </ol>
   </div>
-
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
-    <ol class="list-unstyled social-links">
-      <li><a href="https://github.com/jordanhudgens"><%= fa_icon "github" %></a></li>
-      <li><a href="https://www.instagram.com/jordanhudgens/"><%= fa_icon "instagram" %></a></li>
-      <li><a href="https://twitter.com/jordanhudgens"><%= fa_icon "twitter" %></a></li>
+    <ol class="list-unstyled">
+      <li><a href="https://github.com/clintlwilliams"><%= fa_icon "github" %></a></li>
+      <li><a href="https://www.instagram.com/pamperprints/"><%= fa_icon "instagram" %></a></li>
+      <li><a href="https://twitter.com/clintendo"><%= fa_icon "twitter" %></a></li>
     </ol>
   </div>
 </div>
