--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,20 +4,12 @@
     <p>Rando texto etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
   </div>
   <div class="sidebar-module">
-    <h4>Archives</h4>
+    <h4>Elsewhere</h4>
     <ol class="list-unstyled">
-      <li><a href="#">March 2020</a></li>
-      <li><a href="#">February 2020</a></li>
-      <li><a href="#">January 2020</a></li>
-      <li><a href="#">December 2019</a></li>
-      <li><a href="#">November 2019</a></li>
-      <li><a href="#">October 2019</a></li>
-      <li><a href="#">September 2019</a></li>
-      <li><a href="#">August 2019</a></li>
-      <li><a href="#">July 2019</a></li>
-      <li><a href="#">June 2019</a></li>
-      <li><a href="#">May 2019</a></li>
-      <li><a href="#">April 2019</a></li>
+      <li><a href="https://github.com/clintlwilliams"><%= fa_icon "github" %> I'm here</a></li>
+      <li><a href="https://www.instagram.com/pamperprints/"><%= fa_icon "instagram" %> And here</a></li>
+      <li><a href="https://twitter.com/clintendo"><%= fa_icon "twitter" %> Also here</a></li>
+      <li><a href="https://facebook.com/clint.williams.186590"><%= fa_icon "facebook" %> Here too</a></li>
     </ol>
   </div>
 </div>
