--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,7 @@
-<br /><hl>Portfolio Items</hl>
-
-<%= link_to "Create New Item", new_portfolio_url if logged_in?(:site_admin) %>
-
-<%= render partial: 'portfolio_item', collection: @portfolio_items %>
+<div class="album text-muted">
+  <div class="container">
+    <div class="row">
+      <%= render partial: 'portfolio_item', collection: @portfolio_items %>
+    </div>
+  </div>
+</div>
